# interface-compiler

./: .gitignore  CMakeLists.txt  Compiler.hpp  CompilerSetup.hpp  Config.hpp  ConfigProvider.hpp  FormatToken.hpp  Formatter.cpp  Formatter.hpp  FormatterConfig.hpp  IndexList.hpp  Meta.hpp  MultiStream.hpp  Parser.hpp  StreamFilter.hpp  TODO.md  Transformer.cpp  Transformer.hpp  WebIPC.md  main.cpp  parser.cpp  parser.hpp
Components/: CMakeLists.txt  LangConfigReader.cpp  LangConfigReader.hpp  NamespaceReader.cpp  NamespaceReader.hpp  StandardParser.cpp  StandardParser.hpp  TestFormatter.cpp  TestFormatter.hpp  YamlReader.cpp  YamlReader.hpp
Components/Cpp/: CMakeLists.txt  CppHeadersFormatter.cpp  CppHeadersFormatter.hpp  FormatterBase.cpp  FormatterBase.hpp  FwdDeclFormatter.cpp  FwdDeclFormatter.hpp  HeaderFormatter.cpp  HeaderFormatter.hpp  JsonEncodingFormatter.cpp  JsonEncodingFormatter.hpp  LibraryFormatter.cpp  LibraryFormatter.hpp  LibraryHeaderFormatter.cpp  LibraryHeaderFormatter.hpp  RpcBinaryFormatter.cpp  RpcBinaryFormatter.hpp  RpcFormatter.cpp  RpcFormatter.hpp  RpcJsonFormatter.cpp  RpcJsonFormatter.hpp  WebserviceFormatter.cpp  WebserviceFormatter.hpp  WebserviceHeaderFormatter.cpp  WebserviceHeaderFormatter.hpp
Components/JavaScript/: CMakeLists.txt  Event.js  EventManager.header.js  EventManager.js  FormatterBase.cpp  FormatterBase.hpp  HeaderFormatter.cpp  HeaderFormatter.hpp  JSHeaderFormatter.cpp  JSHeaderFormatter.hpp  JsonEncoding.cpp  JsonEncoding.hpp  JsonEncoding.js  JsonEncodingCore.js  PrimitivesTypeConversion.js  Uuid.js  WebClient.html  WebClient.js  WebClientCore.js  WebClientFormatter.cpp  WebClientFormatter.hpp  WebSocket.js  WebSocketBasics.js  config.jshint
Components/ObjectiveC/: CMakeLists.txt  CppTypeFormatter.cpp  CppTypeFormatter.hpp  FormatterBase.cpp  FormatterBase.hpp  HeaderFormatter.cpp  HeaderFormatter.hpp  WrapperFormatter.cpp  WrapperFormatter.hpp
Components/Ruby/: CMakeLists.txt  ClassesFormatter.cpp  ClassesFormatter.hpp  ConstantsFormatter.cpp  ConstantsFormatter.hpp  CppTypeFormatter.cpp  CppTypeFormatter.hpp  EnumsFormatter.cpp  EnumsFormatter.hpp  EventsFormatter.cpp  EventsFormatter.hpp  FormatterBase.cpp  FormatterBase.hpp  NamespacesFormatter.cpp  NamespacesFormatter.hpp  OperationsFormatter.cpp  OperationsFormatter.hpp  StructsFormatter.cpp  StructsFormatter.hpp
Components/TypeScript/: CMakeLists.txt  FormatterBase.cpp  FormatterBase.hpp  HeaderFormatter.cpp  HeaderFormatter.hpp  JsonEncoding.cpp  JsonEncoding.hpp  WebClientFormatter.cpp  WebClientFormatter.hpp
Model/: CMakeLists.txt  Class.cpp  Class.hpp  Constant.cpp  Constant.hpp  Container.cpp  Container.hpp  Documentation.cpp  Documentation.hpp  DomainObject.cpp  DomainObject.hpp  Element.cpp  Element.hpp  Enum.cpp  Enum.hpp  Event.cpp  Event.hpp  Identifiable.cpp  Identifiable.hpp  Model.hpp  Namespace.cpp  Namespace.hpp  NamespaceMember.cpp  NamespaceMember.hpp  Object.cpp  Object.hpp  Operation.cpp  Operation.hpp  Parameter.cpp  Parameter.hpp  Primitive.cpp  Primitive.hpp  Root.cpp  Root.hpp  Struct.cpp  Struct.hpp  Type.cpp  Type.hpp  TypeBase.cpp  TypeBase.hpp  (+4 more)
Model/Class/: Constant.cpp  Constant.hpp  Event.cpp  (+3 more)
compiler/: CMakeLists.txt  compiler.cpp  compiler.hpp
formatter/: CMakeLists.txt  formatter.cpp  formatter.hpp
formatter/cpp/: cppFormatter.cpp
formatter/stream/: CMakeLists.txt  basicFormatting.hpp  basicWrap.hpp
generator/: CMakeLists.txt  cppFormatter.cpp  cppFormatter.hpp  cppGenerator.cpp  cppGenerator.hpp  formatter.cpp  formatter.hpp  generator.cpp  generator.hpp
model/: CMakeLists.txt  baseObject.cpp  baseObject.hpp  buffer.cpp  buffer.hpp  class.cpp  class.hpp  constant.cpp  constant.hpp  container.cpp  container.hpp  documentation.cpp  documentation.hpp  domainObject.cpp  domainObject.hpp  enum.cpp  enum.hpp  event.cpp  event.hpp  identifiable.cpp  identifiable.hpp  name.cpp  name.hpp  namespace.cpp  namespace.hpp  namespace_member.cpp  namespace_member.hpp  object.cpp  object.hpp  observables.cpp  observables.hpp  operation.cpp  operation.hpp  parameter.cpp  parameter.hpp  parametertype.cpp  parametertype.hpp  primitive.cpp  primitive.hpp  resolvedType.cpp  (+9 more)
parser/: langConfigParser.cpp  langConfigParser.hpp  namespaceParser.cpp  namespaceParser.hpp
yaml/: cpp.yaml  ecs-objects.yaml  ecs.yaml  eos-objects.yaml  everbase.yaml  js-header-cfg.yaml  js.yaml  test.yaml
(+25 files in other folders)
